[package]
name = "neard"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true
default-run = "neard"

[[bin]]
path = "src/main.rs"
name = "neard"

[dependencies]
actix.workspace = true
ansi_term.workspace = true
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
once_cell.workspace = true
openssl-probe.workspace = true
opentelemetry.workspace = true
rayon.workspace = true
rlimit.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-escape.workspace = true
thiserror.workspace = true
tikv-jemallocator.workspace = true
tokio.workspace = true
tracing.workspace = true

nearcore = { path = "../nearcore" }
near-amend-genesis = { path = "../tools/amend-genesis" }
near-chain-configs = { path = "../core/chain-configs" }
near-client = { path = "../chain/client" }
near-cold-store-tool = { path = "../tools/cold-store", package = "cold-store-tool" }
near-dyn-configs = { path = "../core/dyn-configs" }
near-jsonrpc-primitives = { path = "../chain/jsonrpc-primitives" }
near-mirror = { path = "../tools/mirror" }
near-network = { path = "../chain/network" }
near-o11y = { path = "../core/o11y" }
near-performance-metrics = { path = "../utils/near-performance-metrics" }
near-ping = { path = "../tools/ping" }
near-primitives = { path = "../core/primitives" }
near-state-parts = { path = "../tools/state-parts" }
near-state-viewer = { path = "../tools/state-viewer", package = "state-viewer" }
near-store = { path = "../core/store" }

[build-dependencies]
anyhow.workspace = true
rustc_version = "0.4"

[features]
default = ["json_rpc", "rosetta_rpc"]

performance_stats = ["nearcore/performance_stats"]
c_memory_stats = ["nearcore/c_memory_stats"]
test_features = ["nearcore/test_features"]
expensive_tests = ["nearcore/expensive_tests"]
no_cache = ["nearcore/no_cache"]
delay_detector = ["nearcore/delay_detector"]
rosetta_rpc = ["nearcore/rosetta_rpc"]
json_rpc = ["nearcore/json_rpc"]
protocol_feature_fix_staking_threshold = ["nearcore/protocol_feature_fix_staking_threshold"]
protocol_feature_flat_state = ["nearcore/protocol_feature_flat_state"]
protocol_feature_nep366_delegate_action = ["nearcore/protocol_feature_nep366_delegate_action"]

nightly = [
  "nightly_protocol",
  "nearcore/nightly"
]
nightly_protocol = ["nearcore/nightly_protocol"]

# Compile with option to emit a detailed trace of IO operations and their
# results that can be replayed on the estimator. To produce the output, compile
# with this flag and then enable it at runtime with `--record-io-trace=path` option.
io_trace = ["near-store/io_trace", "near-o11y/io_trace", "nearcore/io_trace"]

sandbox = ["nearcore/sandbox"]

# Force usage of a specific wasm vm irrespective of protocol version.
force_wasmer2 = ["nearcore/force_wasmer2"]
force_wasmer0 = ["nearcore/force_wasmer0"]
force_wasmtime = ["nearcore/force_wasmtime"]

[package.metadata.workspaces]
independent = true
