[package]
name = "neard"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
path = "src/main.rs"
name = "neard"

[dependencies]
actix.workspace = true
ansi_term.workspace = true
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
once_cell.workspace = true
openssl-probe.workspace = true
opentelemetry.workspace = true
rayon.workspace = true
rlimit.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-escape.workspace = true
thiserror.workspace = true
tikv-jemallocator.workspace = true
tokio.workspace = true
tracing.workspace = true

nearcore.workspace = true
near-amend-genesis.workspace = true
near-chain-configs.workspace = true
near-client.workspace = true
near-cold-store-tool.workspace = true
near-config-utils.workspace = true
near-crypto.workspace = true
near-dyn-configs.workspace = true
near-flat-storage.workspace = true
near-jsonrpc-primitives.workspace = true
near-mirror.workspace = true
near-network.workspace = true
near-o11y.workspace = true
near-performance-metrics.workspace = true
near-ping.workspace = true
near-primitives.workspace = true
near-state-parts.workspace = true
near-state-viewer.workspace = true
near-store.workspace = true
near-undo-block.workspace = true

[build-dependencies]
anyhow.workspace = true
rustc_version = "0.4"

[features]
default = ["json_rpc", "rosetta_rpc"]

performance_stats = ["nearcore/performance_stats"]
c_memory_stats = ["nearcore/c_memory_stats"]
test_features = ["nearcore/test_features"]
expensive_tests = ["nearcore/expensive_tests"]
no_cache = ["nearcore/no_cache"]
delay_detector = ["nearcore/delay_detector"]
rosetta_rpc = ["nearcore/rosetta_rpc"]
json_rpc = ["nearcore/json_rpc"]
protocol_feature_fix_staking_threshold = ["nearcore/protocol_feature_fix_staking_threshold"]
serialize_all_state_changes = ["nearcore/serialize_all_state_changes"]

nightly = [
  "nightly_protocol",
  "nearcore/nightly",
  "near-state-viewer/nightly",
]
nightly_protocol = ["nearcore/nightly_protocol"]

calimero_zero_storage = [
  "near-primitives/calimero_zero_storage",
]

# Compile with option to emit a detailed trace of IO operations and their
# results that can be replayed on the estimator. To produce the output, compile
# with this flag and then enable it at runtime with `--record-io-trace=path` option.
io_trace = ["near-store/io_trace", "near-o11y/io_trace", "nearcore/io_trace"]

sandbox = ["nearcore/sandbox"]

# Force usage of a specific wasm vm irrespective of protocol version.
force_wasmer2 = ["nearcore/force_wasmer2"]
force_wasmer0 = ["nearcore/force_wasmer0"]
force_wasmtime = ["nearcore/force_wasmtime"]

[package.metadata.workspaces]
independent = true
