[package]
name = "neard"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
path = "src/main.rs"
name = "neard"

[dependencies]
actix.workspace = true
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
once_cell.workspace = true
openssl-probe.workspace = true
opentelemetry.workspace = true
rayon.workspace = true
rlimit.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tikv-jemallocator.workspace = true
tokio.workspace = true
tracing.workspace = true
yansi.workspace = true

nearcore.workspace = true
near-amend-genesis.workspace = true
near-chain-configs.workspace = true
near-client.workspace = true
near-cold-store-tool.workspace = true
near-config-utils.workspace = true
near-crypto.workspace = true
near-database-tool.workspace = true
near-dyn-configs.workspace = true
near-epoch-sync-tool = { workspace = true, optional = true }
near-flat-storage.workspace = true
near-fork-network.workspace = true
near-jsonrpc-primitives.workspace = true
near-mirror.workspace = true
near-network.workspace = true
near-o11y.workspace = true
near-performance-metrics.workspace = true
near-ping.workspace = true
near-primitives.workspace = true
near-state-parts.workspace = true
near-state-parts-dump-check.workspace = true
near-state-viewer.workspace = true
near-store.workspace = true
near-undo-block.workspace = true

[build-dependencies]
anyhow.workspace = true
rustc_version = "0.4"

[features]
default = ["json_rpc", "rosetta_rpc"]

performance_stats = ["nearcore/performance_stats"]
c_memory_stats = ["nearcore/c_memory_stats"]
test_features = ["nearcore/test_features"]
expensive_tests = ["nearcore/expensive_tests"]
no_cache = ["nearcore/no_cache"]
rosetta_rpc = ["nearcore/rosetta_rpc"]
json_rpc = ["nearcore/json_rpc"]
protocol_feature_fix_staking_threshold = ["nearcore/protocol_feature_fix_staking_threshold"]
protocol_feature_nonrefundable_transfer_nep491 = ["near-state-viewer/protocol_feature_nonrefundable_transfer_nep491"]
new_epoch_sync = ["nearcore/new_epoch_sync", "near-epoch-sync-tool/new_epoch_sync"]

nightly = [
  "near-chain-configs/nightly",
  "near-client/nightly",
  "near-database-tool/nightly",
  "near-dyn-configs/nightly",
  "near-fork-network/nightly",
  "near-jsonrpc-primitives/nightly",
  "near-mirror/nightly",
  "near-network/nightly",
  "near-o11y/nightly",
  "near-ping/nightly",
  "near-primitives/nightly",
  "near-state-parts-dump-check/nightly",
  "near-state-parts/nightly",
  "near-store/nightly",
  "near-undo-block/nightly",
  "nearcore/nightly",
  "nightly_protocol",
  "protocol_feature_fix_staking_threshold",
  "protocol_feature_nonrefundable_transfer_nep491",
]
nightly_protocol = [
  "near-chain-configs/nightly_protocol",
  "near-client/nightly_protocol",
  "near-database-tool/nightly_protocol",
  "near-dyn-configs/nightly_protocol",
  "near-fork-network/nightly_protocol",
  "near-jsonrpc-primitives/nightly_protocol",
  "near-mirror/nightly_protocol",
  "near-network/nightly_protocol",
  "near-o11y/nightly_protocol",
  "near-ping/nightly_protocol",
  "near-primitives/nightly_protocol",
  "near-state-parts-dump-check/nightly_protocol",
  "near-state-parts/nightly_protocol",
  "near-store/nightly_protocol",
  "near-undo-block/nightly_protocol",
  "nearcore/nightly_protocol",
]
statelessnet_protocol = [
  "nearcore/statelessnet_protocol",
  "near-primitives/statelessnet_protocol",
]
shadow_chunk_validation = [
  "near-client/shadow_chunk_validation",
]

# A feature which allows to artificially increase the size of all produced instances of `ChunkStateWitness`.
# When enabled, the node will read "artificial_witness_size_to_add" from config.json and add this many
# bytes of data to all produced witnesses. Data is added by injecting a dummy transaction with
# random contract code of desired size. The injected transaction is automatically removed before witness validation.
# The feature has to be enabled on all nodes in the network because chunk validators will reject witnesses with
# the injected transaction when the feature isn't enabled.
# The extra transaction is only added when "artificial_witness_size_to_add" is larger than zero, so it's safe to
# go back to using binaries where this feature is disabled.
#
# This feature can be used to test how the protocol behaves when witness size gets really large, how much data the
# witness distribution logic can handle in real-world networks.
artificial_witness_size = [
  "near-client/artificial_witness_size",
]

calimero_zero_storage = [
  "near-primitives/calimero_zero_storage",
]

# Compile with option to emit a detailed trace of IO operations and their
# results that can be replayed on the estimator. To produce the output, compile
# with this flag and then enable it at runtime with `--record-io-trace=path` option.
io_trace = ["near-store/io_trace", "near-o11y/io_trace", "nearcore/io_trace"]

sandbox = ["near-o11y/sandbox", "nearcore/sandbox"]

[package.metadata.workspaces]
independent = true
