[package]
name = "nearmint"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
abci = "0.4"
log = "0.4"
env_logger = "0.6"
protobuf = { version = "2.2.4", features = ["with-bytes"] }
base64 = { version = "0.10.0" }
serde_json = "1.0"
clap = "2.32"

primitives = { path = "../runtime/primitives" }
near-protos = { path = "../runtime/protos" }
storage = { path = "../runtime/storage" }
node-runtime = { path = "../runtime/runtime" }
verifier = { path = "../runtime/verifier" }

[dev-dependencies]
tempdir = "0.3"
