[package]
name = "neard-runtime"
version = "0.1.0"
authors = ["Near Protocol <hello@nearprotocol.com>"]

[dependencies]
rustc-hex = "1.0"
hex-literal = "0.1.0"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
parity-codec = "2.0"
parity-codec-derive = "2.0"
sr-api = { git = "https://github.com/paritytech/substrate", branch = "rh-aura", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate", branch = "rh-aura" }
sr-io = { git = "https://github.com/paritytech/substrate", branch = "rh-aura" }
srml-support = { git = "https://github.com/paritytech/substrate", branch = "rh-aura" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", branch = "rh-aura" }
substrate-keyring = { git = "https://github.com/paritytech/substrate", branch = "rh-aura" }
srml-balances = { git = "https://github.com/paritytech/substrate", branch = "rh-aura" }
srml-consensus = { git = "https://github.com/paritytech/substrate", branch = "rh-aura" }
srml-executive = { git = "https://github.com/paritytech/substrate", branch = "rh-aura" }
sr-primitives = { git = "https://github.com/paritytech/substrate", branch = "rh-aura" }
srml-system = { git = "https://github.com/paritytech/substrate", branch = "rh-aura" }
srml-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rh-aura" }
srml-upgrade-key = { git = "https://github.com/paritytech/substrate", branch = "rh-aura" }
substrate-client = { git = "https://github.com/paritytech/substrate", branch = "rh-aura", optional = true }
sr-version = { git = "https://github.com/paritytech/substrate", branch = "rh-aura" }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"substrate-primitives/std",
	"sr-api/std",
	"sr-std/std",
	"sr-io/std",
	"srml-support/std",
	"srml-balances/std",
	"srml-consensus/std",
	"srml-executive/std",
	"sr-primitives/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-upgrade-key/std",
	"sr-version/std",
	"serde_derive",
	"serde/std",
	"safe-mix/std",
	"substrate-client"
]
