[package]
name = "test-loop-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dev-dependencies]
assert_matches.workspace = true
aurora-engine-transactions.workspace = true
aurora-engine-types.workspace = true
borsh.workspace = true
bytesize.workspace = true
derive_builder.workspace = true
ethabi.workspace = true
futures.workspace = true
hex.workspace = true
itertools.workspace = true
parking_lot.workspace = true
primitive-types.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rlp.workspace = true
axum.workspace = true
serde_json.workspace = true
sha3.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower-service.workspace = true
tracing.workspace = true

near-async.workspace = true
near-chain.workspace = true
near-chain-configs.workspace = true
near-chunks.workspace = true
near-client.workspace = true
near-client-primitives.workspace = true
near-crypto.workspace = true
near-epoch-manager.workspace = true
near-external-storage.workspace = true
near-indexer.workspace = true
near-jsonrpc.workspace = true
near-jsonrpc-primitives.workspace = true
near-network.workspace = true
near-o11y.workspace = true
near-parameters.workspace = true
near-primitives.workspace = true
near-primitives-core.workspace = true
near-store.workspace = true
near-test-contracts.workspace = true
near-vm-runner.workspace = true
near-wallet-contract.workspace = true
nearcore.workspace = true
testlib.workspace = true

[features]
protocol_feature_spice = [
    "near-chain/protocol_feature_spice",
    "near-client/protocol_feature_spice",
    "near-epoch-manager/protocol_feature_spice",
    "nearcore/protocol_feature_spice",
    "near-store/protocol_feature_spice",
    "near-primitives-core/protocol_feature_spice",
]
test_features = [
    "nearcore/test_features",
    "near-store/test_features",
    "near-vm-runner/test_features",
    "near-test-contracts/test_features",
]
nightly = [
    "near-chain-configs/nightly",
    "near-chain/nightly",
    "near-chunks/nightly",
    "near-client/nightly",
    "near-epoch-manager/nightly",
    "near-jsonrpc/nightly",
    "near-network/nightly",
    "near-o11y/nightly",
    "near-parameters/nightly",
    "near-primitives-core/nightly",
    "near-primitives/nightly",
    "near-store/nightly",
    "near-vm-runner/nightly",
    "nearcore/nightly",
    "testlib/nightly",
]
