[package]
name = "near-tracing"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
opentelemetry-proto.workspace = true
prost.workspace = true
tokio.workspace = true
tonic.workspace = true

[lints]
workspace = true
