[package]
name = "near-tracing"
version = "0.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2024"
rust-version = "1.86.0" # Please update the Dockerfile to `rust:1.XY.Z-bullseye` when bumping version here
repository = "https://github.com/near/nearcore"
license = "MIT OR Apache-2.0"

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.1"
anyhow = "1.0.62"
bson = "2.10.0"
clap = { version = "4.2.0", features = ["derive"] }
hex = "0.4.2"
mongodb = "2.8.2"
opentelemetry-proto = { version = "0.5.0", features = ["gen-tonic", "trace", "with-serde"] }
prost = "0.12.4"
tokio = "1.38"
tonic = "0.11.0"
serde = { version = "1.0.192", features = ["derive"] }
