[package]
name = "near-rpc-probe"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
near-jsonrpc-client-internal = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
near-o11y = { workspace = true }
near-primitives = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["std"] }

[lints]
workspace = true
