[package]
name = "near-synth-bm"
version = "0.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
rust-version = "1.84.0"
repository = "https://github.com/near/nearcore"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
near-crypto = "0.27"
near-jsonrpc-client = "0.14.0"
near-jsonrpc-primitives = "0.27"
near-primitives = "0.27"
rand = "0.8.4"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1.40", features = ["std"] }
