[package]
name = "near-synth-bm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true


[dependencies]
anyhow.workspace = true 
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
ext-near-jsonrpc-client.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing = { workspace = true, features = ["std"] }
rand.workspace = true

# `near-jsonrpc-client` from crates.io (a.k.a. `ext-near-jsonrpc-client) has below crates in its
# public interface and restricts their versions. Inheriting below crates from the workspace would
# pull in incompatible versions, for example `near-crypto.workspace` would pull in a `near-crypto`
# version that differs from the one used by `near-jsonrpc-client`, leading to compilation errors.
near-crypto = "0.28"
near-jsonrpc-primitives = "0.28"
near-primitives = "0.28"
