[package]
name = "near-synth-bm"
version = "0.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2024"
rust-version = "1.86.0"
repository = "https://github.com/near/nearcore"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
near-crypto = "0.27"
near-jsonrpc-client = "0.14.0"
near-jsonrpc-primitives = "0.27"
near-primitives = "0.27"
rand = "0.8.4"
reqwest = "0.12"
tokio = { version = "1.43.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1.40", features = ["std"] }
tracing-subscriber = { version = "0.3.19", features = ["std"] }

[dev-dependencies]
indoc = "2"
