[package]
name = "near-transactions-generator"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[features]
nightly = [
    "near-async/nightly",
    "near-client-primitives/nightly",
    "near-client/nightly",
    "near-network/nightly",
    "near-primitives/nightly",
    "node-runtime/nightly",
]

[dependencies]
anyhow.workspace = true
near-async = { workspace = true }
near-crypto = { workspace = true }
near-network = { workspace = true }
near-primitives = { workspace = true, features = ["clock", "test_utils"] }
near-client.workspace = true
near-client-primitives.workspace = true
node-runtime.workspace = true

pid-lite.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["std"] }

[lints]
workspace = true
