[package]
name = "near-chain"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
actix.workspace = true
assert_matches.workspace = true
borsh.workspace = true
bytesize.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
easy-ext.workspace = true
enum-map.workspace = true
itertools.workspace = true
itoa.workspace = true
lru.workspace = true
num-rational.workspace = true
once_cell.workspace = true
rand_chacha.workspace = true
rand.workspace = true
rayon.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
yansi.workspace = true

near-async.workspace = true
near-cache.workspace = true
near-chain-configs = { workspace = true, features = [
  "test_genesis",
  "test_utils",
] }
near-chain-primitives.workspace = true
near-client-primitives.workspace = true
near-crypto.workspace = true
near-epoch-manager.workspace = true
near-network.workspace = true
near-o11y.workspace = true
near-performance-metrics.workspace = true
near-performance-metrics-macros.workspace = true
near-pool.workspace = true
near-primitives = { workspace = true, features = ["solomon", "rand"] }
near-store.workspace = true
node-runtime.workspace = true
near-parameters.workspace = true
near-vm-runner.workspace = true
near-mainnet-res.workspace = true

[dev-dependencies]
near-primitives = { workspace = true, features = ["clock"] }
primitive-types.workspace = true
insta.workspace = true
assert_matches.workspace = true

[features]
# if enabled, we assert in most situations that are impossible unless some byzantine behavior is observed.
byzantine_asserts = []
expensive_tests = []
test_features = [
  "near-vm-runner/test_features",
  "near-primitives/test_features",
  "near-store/test_features",
  "node-runtime/test_features",
]
shadow_chunk_validation = []
no_cache = ["near-store/no_cache"]
new_epoch_sync = [
  "near-store/new_epoch_sync",
  "near-primitives/new_epoch_sync",
  "near-epoch-manager/new_epoch_sync",
  "near-chain-primitives/new_epoch_sync",
]

protocol_feature_reject_blocks_with_outdated_protocol_version = [
  "near-primitives/protocol_feature_reject_blocks_with_outdated_protocol_version",
]

nightly = [
  "near-async/nightly",
  "near-chain-configs/nightly",
  "near-client-primitives/nightly",
  "near-epoch-manager/nightly",
  "near-mainnet-res/nightly",
  "near-network/nightly",
  "near-o11y/nightly",
  "near-parameters/nightly",
  "near-pool/nightly",
  "near-primitives/nightly",
  "near-store/nightly",
  "near-vm-runner/nightly",
  "nightly_protocol",
  "node-runtime/nightly",
  "protocol_feature_reject_blocks_with_outdated_protocol_version",
]
nightly_protocol = [
  "near-async/nightly_protocol",
  "near-chain-configs/nightly_protocol",
  "near-client-primitives/nightly_protocol",
  "near-epoch-manager/nightly_protocol",
  "near-mainnet-res/nightly_protocol",
  "near-network/nightly_protocol",
  "near-o11y/nightly_protocol",
  "near-parameters/nightly_protocol",
  "near-pool/nightly_protocol",
  "near-primitives/nightly_protocol",
  "near-store/nightly_protocol",
  "near-vm-runner/nightly_protocol",
  "node-runtime/nightly_protocol",
]
statelessnet_protocol = [
  "near-store/statelessnet_protocol",
  "near-primitives/statelessnet_protocol",
]
sandbox = ["near-o11y/sandbox", "near-primitives/sandbox"]
testloop = []
